--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,32 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  --background-primary-color: #000;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --primary-color: #c3f86a;
+  --secondary-color: #fff;
+
+  --accent-color: #c3f86a;
+  --second-accent-color: #272727;
+
+  --hover-primary-color: #baf651;
+
+  --text-color: #fff;
+
+  --disabled-color: #272727;
+
+  --primary-text-size: 12px;
+
+  --primary-line-height: 1.3;
+
+  --link-color: var(--accent-color);
+
+  --container-size: 1440px;
+
+  font-family: "Inter", sans-serif;
+  line-height: var(--primary-line-height);
+  font-size: var(--primary-text-size);
+  font-weight: 400;
+  color: var(--text-color);
+  background-color: var(--background-primary-color);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,54 +36,52 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: var(--link-color);
+  text-decoration: none;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--hover-primary-color);
+}
+
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+img {
+  max-width: 100%;
+  object-fit: contain;
+  object-position: center;
 }
 
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  flex-direction: column;
   min-width: 320px;
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+#root {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.container {
+  padding: 0 20px;
+  max-width: var(--container-size);
+  margin: 0 auto;
+  width: 100%;
+  flex: 1;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.accented-text {
+  color: var(--accent-color);
+  font-weight: 700;
+}
+
+header {
+  position: sticky;
+  top: 1;
 }
